# issue-tracker

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
docker/: Dockerfile
issue_tracker/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
issue_tracker/apps/issues/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
issue_tracker/apps/issues/migrations/: 0001_initial.py  0002_auto_20221117_1045.py
issue_tracker/apps/issues/tests/: conftest.py  test_api.py  test_models.py
issue_tracker/common/: utils.py
scripts/: entrypoint.sh
templates/admin/issues/: change_list.html
tests/: test_common.py
