[tool.poetry]
name = "issue_tracker"
version = "0.1.0"
description = "A simple issue tracking app."
authors = ["Peter Kubov <xkubov@gmail.com>"]
readme = "README.md"
packages = [
    {include = "issue_tracker"},
    {include = "scripts/*.py"},
]
[tool.poetry.group.dev.dependencies]
pytest-drf = "^1.1.3"


[tool.flake8]
max-line-length = 100
per-file-ignores = "**/migrations/*.py:E501"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "issue_tracker.settings"
mock_use_standalone_module = true
python_files = ['tests.py', 'test_*.py', '*_tests.py']
addopts = "--mypy --black --isort --pylint --cov=issue_tracker"
filterwarnings = [
    'ignore:.*checker-specific:DeprecationWarning',
    'ignore:.*__implements__:DeprecationWarning',
    'ignore:.*utils.check_messages:DeprecationWarning',
    'ignore:.*BlackItem:',
    'ignore:.*PylintFile:'
]

[tool.poe.tasks]
_mypy = "mypy ."
_flake = "flake8 ."
_black = "black ."
_isort = "isort ."
_pylint = "pylint issue_tracker"
format = ["_isort", "_black"]
lint = ["_mypy", "_flake", "_pylint"]
release = "bump2version"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
namespace_packages = true
warn_unused_ignores = true

[tool.pylint.master]
load-plugins="pylint_django"
django-settings-module="issue_tracker.settings"
disable = [
    "C0114", # Disable missing docstring.
    "C0115", # Disable missing docstring.
]
ignore = ["migrations", "manage.py", "tests", "settings.py", "settings_prod.py"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0.post0"
mypy = "^0.990"
bump2version = "^1.0.1"
poethepoet = "^0.16.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-mypy = "^0.10.1"
pytest-black = "^0.3.12"
pytest-pylint = "^0.19.0"
pytest-django = "^4.5.2"
pytest-isort = "^3.1.0"
pylint = "^2.15.5"
pylint-django = "^2.5.3"
django-types = "^0.16.0"
djangorestframework-types = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
